2010-05-27  Pavel Feldman  <pfeldman@chromium.org>

Reviewed by Yury Semikhatsky.

        Web Inspector: Get CSS rule offsets lazily.

        https://bugs.webkit.org/show_bug.cgi?id=39832

        * inspector/InspectorCSSStore.cpp:
        (WebCore::InspectorCSSStore::getStartEndOffsets):
        * inspector/InspectorDOMAgent.cpp:
        (WebCore::InspectorDOMAgent::buildObjectForRule):


Canonical link: https://commits.webkit.org/51348@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60297 268f45cc-cd09-0410-ab3c-d52691b4dbfc